[project]
name = "CNG-tutorials"
description = "Cloud-Native Geospatial (CNG) tutorials"
authors = [{name = "Tyler Erickson", email = "tyler@vorgeo.com"}]
dependencies = []
requires-python = ">= 3.11"
version = "0.1.0"

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
indent-width = 4

[tool.ruff.format]
quote-style = "single"
